# PlantCare

./: .gitignore  CMakeLists.txt
.zephyr-cache/ToolchainCapabilityDatabase/: log.txt
boards/: nucleo_wl55jc.overlay
confs/: prj_nucleo_wl55jc.conf
src/: main.c
src/Sensors/: gps_sensor.h  light_sensor.c
src/helpers/: plantcare_config.c  plantcare_config.h  plantcare_mode_normal.c  plantcare_mode_test.c  plantcare_modes.h  plantcare_state.c  plantcare_state.h  plantcare_units.c  plantcare_units.h  sensor_thread.c
src/sensors/: accelerometer_sensor.c  accelerometer_sensor.h  button.c  button.h  gps_sensor.c  humidity_sensor.c  led1.c  led1.h  led2.c  led2.h
